<resources>
    <string name="app_name">Prank Sounds</string>
    <string name="AppId" translatable="false">ca-app-pub-4665039869705085~3678890949</string>

    <!--Original Ids-->
<!--    <string name="BannerAd" translatable="false">ca-app-pub-4665039869705085/2555043126</string>-->
<!--    <string name="CollapsibleBannerAd" translatable="false">ca-app-pub-4665039869705085/8585354762</string>-->
<!--    <string name="Interstitial" translatable="false">ca-app-pub-4665039869705085/9979240563</string>-->
<!--    <string name="SplashInterstitial" translatable="false">ca-app-pub-4665039869705085/3292611585</string>-->
<!--    <string name="AppOpen" translatable="false">ca-app-pub-4665039869705085/3185313104</string>-->
<!--    <string name="native_ad" translatable="false">ca-app-pub-4665039869705085/8967228219</string>-->
    <!--TestIds-->
    <string name="BannerAd" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="CollapsibleBannerAd" translatable="false">ca-app-pub-3940256099942544/2014213617</string>
    <string name="Interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="SplashInterstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ad" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="app_open" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="app_open_real" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="banner_test_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_test_ad_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>


    <string name="simulated_hair_clipper">Simulated hair Clipper</string>
    <string name="additional_entertainment">Additional Entertainment</string>
    <string name="start">Start</string>
    <string name="other_prank_sounds">Try other prank Sounds</string>
    <string name="fart">Fart</string>
    <string name="halloween">Halloween</string>
    <string name="air_horn">Air Horn</string>
    <string name="stun_gun">Stun Gun</string>
    <string name="air_horn_prank">Air Horn Prank</string>
    <string name="select_sound">Select Sound:</string>
    <string name="start_loop">Start Loop</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="truck">Truck</string>
    <string name="bike">Bike</string>
    <string name="stop_loop">Stop loop</string>
    <string name="stop_loop_first">Stop the loop first</string>
    <string name="tap_and_hold_to_play_sounds">Tap and hold to play Sounds</string>
    <string name="fart_prank">Fart Prank</string>
    <string name="halloween_sounds">Halloween Sounds</string>
    <string name="stun_gun_sounds">Stun Gun Sounds</string>
    <string name="bubbles">Bubbles</string>
    <string name="poop">Poop</string>
    <string name="wet_fart">Wet Fart</string>
    <string name="dripping">Dripping</string>
    <string name="vipertek">Vipertek</string>
    <string name="tactical">Tactical</string>
    <string name="taser">Taser</string>
    <string name="horror">Horror</string>
    <string name="shiver">Shiver</string>
    <string name="creeps">Creeps</string>
    <string name="scary">Scary</string>
    <string name="are_you_sure_you_to_want_to_exit">Are you Sure you to want to Exit ?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="loading">Loading App...!</string>
    <string name="ad_is_loading">Ad is Loading...</string>
    <string name="change">Change</string>
    <string name="more">More</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="loading_sounds">Loading Sounds...!</string>
    <string name="done">Done</string>
    <string name="select_language">Select Language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="african" translatable="false">African</string>
    <string name="french" translatable="false">French</string>
    <string name="turkish" translatable="false">Turkish</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="dutch" translatable="false">Dutch</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="italian" translatable="false">Italian</string>
    <string name="german" translatable="false">German</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="japan" translatable="false">Japanese</string>
    <string name="korean" translatable="false">Korean</string>
    <string name="malay" translatable="false">Malaysia</string>
    <string name="russia" translatable="false">Russian</string>
    <string name="urdu" translatable="false">Urdu</string>
    <string name="philippines" translatable="false">Philippines</string>
    <string name="pershion" translatable="false">Persian</string>
    <string name="chines" translatable="false">Chinese</string>
    <string name="current_language">Current Language</string>
    <string name="all_languages">All Languages</string>
    <string name="loading_ad">Loading Ad...</string>
    <string name="pro">Pro</string>
    <string name="purchase_not_found">Purchase not found!</string>
    <string name="purchase_success">Purchase Successfully!</string>
    <string name="restart_the_app_to_complete_setup">Please restart the app!</string>
    <string name="user_canceled">User canceled!</string>
    <string name="purchase_failed">Purchase failed!</string>
    <string name="purchase_desc_month">Billing starts at the end of your free trial. Trial starting on %s and ends at %s. After trial ends you will be charged %s on %s and will be charged %s against auto renew on %s unless you cancel.</string>
    <string name="purchase_desc_year">You will be charged %s on %s and will be charged %s against auto renew on %s unless you cancel.</string>
    <string name="yearly_plan">Yearly Plan:</string>
    <string name="monthly_plan">Monthly Plan:</string>
    <string name="to_cancel_your_subscription">To Cancel your subscription:</string>
    <string name="_1_open_google_play_store_on_your_android_device">1. Open Google Play Store on your Android device.</string>
    <string name="_2_check_your_google_account">2. Check your Google Account.</string>
    <string name="_3_tap_menu_then_subscriptions">3. Tap Menu, then Subscriptions.</string>
    <string name="_4_select_the_subscription_and_tap_cancel">4. Select the subscription and tap Cancel.</string>
    <string name="_3_days_free_trail">3 days free trail</string>
    <string name="more_features">More Features</string>
    <string name="features">Features</string>
    <string name="no_advertisement">No Advertisement</string>
    <string name="premium_support">Premium Support</string>
    <string name="plans">Plans</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="_continue">Continue</string>
    <string name="continue_with_ads"><u>Continue with ads!</u></string>
    <string name="start_free_trial">Start free trail!</string>
    <string name="hair_trimmer_simulator">Hair Trimmer Simulator</string>
    <string name="fart_sound_prank">Fart Sound Prank</string>
    <string name="vehicle_sounds_prank">Vehicle Sounds Prank</string>
    <string name="stun_gun_sounds_prank">Stun Gun Sounds Prank</string>
    <string name="halloween_sounds_prank">Halloween Sounds Prank</string>
    <string name="exit_app">Exit App?</string>
    <string name="app_theme">App Theme</string>
    <string name="app_language">App Language</string>
    <string name="premium_app">Premium App</string>
    <string name="system_default">System Default</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="apply">APPLY</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="do_you_want_to_exit_the_app">Do you want to exit the app?</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="pro_features">Pro Features</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="ads_free">Ads Free</string>
    <string name="better_performance">Better Performance</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="send_email">Send email..</string>
    <string name="submit">Submit</string>
    <string name="we_work_super_hard_to_make_application_better_nfor_you_and_would_love_to_know">We work super hard to make application better \nfor you and would love to know</string>
    <string name="enjoying_the_app">Enjoying the App?</string>
    <string name="continue_with_pro">Continue with Pro!</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="ater_trail_ends">After trail ends</string>
    <string name="year">/Year</string>
    <string name="month">/Month</string>
    <string name="one_time_purchase">One Time Purchase</string>
    <string name="fetching">Fetching…</string>
    <string name="a_one_time_purchase_to_enjoy_the_premium_features_without_worry_of_monthly_subscriptions">A one time purchase to enjoy the Premium features without worry of monthly subscriptions.</string>
    <string name="_skip">Skip</string>
    <string name="_finish">Finish</string>
    <string name="_next">Next</string>
    <string name="english_fix">English</string>
    <string name="vehicle_sound_prank">Vehicle Sound Prank</string>
    <string name="prank_sounds">Prank\nSounds</string>
    <string name="fart_sounds">Fart\nSounds</string>
    <string name="hair_clipper">Hair\nClipper</string>
    <string name="prank_sounds_1">Prank\nSounds</string>

</resources>