<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/exit_app"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/frameBack"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/bg_card"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ad_is_loading" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/do_you_want_to_exit_the_app"
            android:textColor="@color/textColor"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/bg_card"
                android:backgroundTint="#6DB6B3B3"
                android:outlineProvider="none"
                android:singleLine="true"
                android:text="@string/no"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/bg_red"
                android:backgroundTint="@color/red"
                android:singleLine="true"
                android:text="@string/yes"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>