<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    tools:context=".UI.PremiumScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/fart2"
                app:layout_constraintHeight_percent="0.46"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cancel_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvFingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:letterSpacing="0.05"
                android:text="@string/pro_features"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/laypr"
                app:layout_constraintTop_toBottomOf="@+id/ivTop"
                tools:layout_editor_absoluteX="21dp" />

            <LinearLayout
                android:id="@+id/laypr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/layMonth"
                app:layout_constraintTop_toBottomOf="@+id/tvFingerprint"
                tools:layout_editor_absoluteX="26dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="60dp"
                    android:paddingVertical="6dp"
                    android:text="@string/dark_mode"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/check_mark_lined"
                    app:drawableTint="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:text="@string/ads_free"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/check_mark_lined"
                    app:drawableTint="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:text="@string/better_performance"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/check_mark_lined"
                    app:drawableTint="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layMonth"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/selected_background_drawable"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/laypr"
                tools:layout_editor_absoluteX="20dp">

                <ImageView
                    android:id="@+id/monthlyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/check_circle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:paddingHorizontal="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="12dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/one_time_purchase"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="12dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/fetching"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/a_one_time_purchase_to_enjoy_the_premium_features_without_worry_of_monthly_subscriptions"
                android:textSize="12sp"
                app:drawableTint="@color/textColor"
                app:layout_constraintBottom_toTopOf="@+id/btnContinuePurchase"
                app:layout_constraintTop_toBottomOf="@+id/layMonth"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/btnContinuePurchase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/bg_red"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/_continue"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/baseline_arrow_right_alt_24"
                app:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tvContinueAds"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/tvContinueAds"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/continue_with_ads"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnContinuePurchase"
                tools:layout_editor_absoluteX="21dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>