<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    tools:context=".UI.LanguageSelection">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/icon_arrow_back"
            android:visibility="gone" />

        <View
            android:id="@+id/viewName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:text="@string/select_language"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ivApply"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_done"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/done"
            android:textColor="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLangNative"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="6dp"
            android:visibility="gone"
            android:text="@string/current_language"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/bg_red">


            <TextView
                android:id="@+id/tvLangName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginVertical="6dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivSelected"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="English" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/radio_check"
                app:layout_constraintBottom_toBottomOf="@+id/tvLangNAme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvLangNAme" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="6dp"
            android:text="@string/all_languages"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/language_item" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLangNative"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_card"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ad_is_loading" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>