<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".UI.Machine1">

    <RelativeLayout
        android:id="@+id/animal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:fontFamily="cursive"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:singleLine="true"
                android:text="@string/hair_trimmer_simulator"
                android:textColor="@color/white"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ImageView
            android:id="@+id/home_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/icon_arrow_back"
            app:tint="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@drawable/trimmer1"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/toggle_selector"
            android:gravity="center"
            android:text="@string/togglebutton"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <FrameLayout
        android:id="@+id/adaptive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:paddingVertical="4dp"
        android:visibility="gone" />
</LinearLayout>